fix: fix horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -866,7 +866,7 @@ button {
 .dark-background {
   position: absolute;
   z-index: 9996;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: #2D303A;
   opacity: 0.6;
@@ -1124,6 +1124,7 @@ main > .blue {
   left: 0;
   background: rgba(0, 0, 0, 0.5);
   overflow-wrap: break-word;
+  overflow-y: hidden;
 }
 #message-block.hidden {
   display: none;
